Mottakerinstitusjon kan være null ved anmodning om unntak, fikser at det kastes nullpointer